; ModuleID = '/home/carl/AnghaBench/vlc/modules/video_filter/extr_extract.c_get_custom_pix_8b.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/video_filter/extr_extract.c_get_custom_pix_8b.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32**, i32**, i32**, i32**, i32**, i32**, i32, i32, i32*, i32)* @get_custom_pix_8b to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @get_custom_pix_8b(i32** %0, i32** %1, i32** %2, i32** %3, i32** %4, i32** %5, i32 %6, i32 %7, i32* %8, i32 %9) #0 {
  %11 = alloca i32**, align 8
  %12 = alloca i32**, align 8
  %13 = alloca i32**, align 8
  %14 = alloca i32**, align 8
  %15 = alloca i32**, align 8
  %16 = alloca i32**, align 8
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32*, align 8
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  store i32** %0, i32*** %11, align 8
  store i32** %1, i32*** %12, align 8
  store i32** %2, i32*** %13, align 8
  store i32** %3, i32*** %14, align 8
  store i32** %4, i32*** %15, align 8
  store i32** %5, i32*** %16, align 8
  store i32 %6, i32* %17, align 4
  store i32 %7, i32* %18, align 4
  store i32* %8, i32** %19, align 8
  store i32 %9, i32* %20, align 4
  %22 = call i32 (...) @GET_CUSTOM_PIX()
  ret void
}

declare dso_local i32 @GET_CUSTOM_PIX(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
